# smash

./: Cargo.toml  README.md  Trunk.toml
public/: index.html  style.css
public/assets/models/: player.glb
public/assets/models/cube/: metal.glb  stone.glb  wooden.glb
public/js/: global.d.ts  prediction.js
public/models/movement/: metadata.json  model.json
public/models/rotation/: metadata.json
src/: game.rs  lib.rs  main.rs  state.rs  utils.rs
src/game/: assets.rs  constants.rs  groups.rs  input.rs  objects.rs  state.rs  systems.rs  tags.rs
src/game/input/: events.rs  gesture.rs  keyboard.rs
src/game/input/gesture/: js.rs  predictions.rs
src/game/objects/: camera.rs  cube.rs  light.rs  player.rs  punch.rs  stage.rs  ui.rs
src/game/objects/camera/: constants.rs
src/game/objects/cube/: assets.rs  constants.rs
src/game/objects/light/: constants.rs
src/game/objects/player/: action.rs  animation.rs  assets.rs  constants.rs  event.rs  state.rs
src/game/objects/punch/: constants.rs
src/game/objects/stage/: constants.rs
src/game/objects/ui/: assets.rs  constants.rs  elapsed.rs  player_dead.rs  player_living.rs
src/game/systems/: cube_spawner.rs
src/game/systems/cube_spawner/: constants.rs  spawn_control.rs
