[package]
name = "run-away"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bevy = "0.9"
bevy_rapier3d = { version = "0.19", features = [
    "simd-stable",
    "debug-render",
    "wasm-bindgen",
] }
iyes_loopless = "0.9"
bevy_asset_loader = { version = "0.14", features = ["stageless"] }

[profile.dev.package."*"]
opt-level = 3
