[package]
name = "smash"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bevy = "0.9"
bevy_rapier3d = { version = "0.19", features = [
    "simd-stable",
    "debug-render",
    "wasm-bindgen",
] }
iyes_loopless = "0.9"
bevy_asset_loader = { version = "0.14", features = ["stageless"] }
rand = "0.8.5"
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.dev.package."*"]
opt-level = 3
